tests/NormalTests/paczka1/fuzzy1/87937178.err
Error in line 1: 1WqiWaGW A914 53,9
Error in line 9: A914 S861 6,6
Error in line 22: POJXKiDJ8bm S157 7,6
